@@ -204,6 +204,9 @@ with all sufficient information, see the ChangeLog file or Redmine
   * Add Set#=== as alias to #include? [Feature #13801]
   * Add Set#reset [Feature #6589]
 
+* StringIO
+  * StringIO#write accepts multiple arguments
+
 * WEBrick
 
   * Add Server Name Indication (SNI) support [Feature #13729]
